custom-builds/custom-device-registry/030-DeploymentConfig.yaml
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: iot-custom-device-registry
  labels:
    app: iot-custom-device-registry
    deploymentconfig: iot-custom-device-registry
    enmasse-component: iot
spec:
  replicas: 1

  selector:
    app: iot-custom-device-registry
    deploymentconfig: iot-custom-device-registry

  strategy:
    type: Rolling

  triggers:

    - type: ConfigChange

    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - device-registry
        from:
          kind: ImageStreamTag
          name: iot-custom-device-registry:latest

  template:
    metadata:
      labels:
        app: iot-custom-device-registry
        deploymentconfig: iot-custom-device-registry
    spec:
      containers:

# Main protocol adapter container

      - name: device-registry
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /readiness
            port: 8088
            scheme: HTTP
          initialDelaySeconds: 10
        livenessProbe:
          httpGet:
            path: /liveness
            port: 8088
            scheme: HTTP
          initialDelaySeconds: 180
        resources:
          limits:
            memory: 512Mi
        ports:
        - containerPort: 8778
          name: jolokia
        - containerPort: 8443
          name: https
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 5671
          name: amqps
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/config
          name: config
          readOnly: true
        - mountPath: /etc/tls
          name: tls
          readOnly: true
        - mountPath: /var/lib/hono/device-registry
          name: registry

      volumes:
      - name: config
        configMap:
          name: iot-custom-device-registry-config
      - name: registry
        persistentVolumeClaim:
          claimName: iot-custom-device-registry-pvc
      - name: tls
        secret:
          secretName: iot-custom-device-registry-tls
